public/openshift/agregate_logging/logging_notes/yaml/elasticsearch-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: elasticsearch
  namespace: openshift-logging
spec:
  host:
  to:
    kind: Service
    name: elasticsearch
  tls:
    termination: reencrypt
    destinationCACertificate: |
      -----BEGIN CERTIFICATE-----
      MIIFKTCCAxGgAwIBAgIJAIdQ1X20gOzMMA0GCSqGSIb3DQEBCwUAMCsxKTAnBgNV
[...]
      tYBCx78jYI8pO0mtTqItY0To4diuSoZToh897g0=
      -----END CERTIFICATE-----
